feat: update swagger endpoint Transaksi
