# backend/storage/api-docs/api-docs.json
@@ -281,7 +281,9 @@
                             "schema": {
                                 "required": [
                                     "password_confirmation",
-                                    "password"
+                                    "password",
+                                    "address",
+                                    "phone"
                                 ],
                                 "properties": {
                                     "password": {
@@ -289,14 +291,14 @@
                                         "format": "password",
                                         "example": "Password value of at least 8"
                                     },
-                                    "address": {
-                                        "type": "string",
-                                        "example": "Online"
-                                    },
                                     "password_confirmation": {
                                         "type": "string",
                                         "format": "password_confirmation",
                                         "example": "The value must be the same as the password"
+                                    },
+                                    "address": {
+                                        "type": "string",
+                                        "example": "Online"
                                     },
                                     "phone": {
                                         "type": "string",
@@ -934,7 +936,7 @@
                 ]
             }
         },
-        "/api/user/:id/keranjang": {
+        "/api/user/keranjang": {
             "get": {
                 "tags": [
                     "Keranjang"
@@ -966,7 +968,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/products": {
@@ -1632,6 +1639,262 @@
                                         "message": {
                                             "type": "string",
                                             "example": "Role not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/transaksi": {
+            "get": {
+                "tags": [
+                    "Transaksi"
+                ],
+                "summary": "Get All Transaksi",
+                "description": "Get All Transaksi",
+                "operationId": "getTransaksi",
+                "responses": {
+                    "200": {
+                        "description": "Daftar Transaksi Berhasil Ditemukan",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Daftar Transaksi Berhasil Ditemukan"
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Transaksi"
+                ],
+                "summary": "Add Transaksi",
+                "description": "Add Transaksi",
+                "operationId": "postTransaksi",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "detailTransaksi": {
+                                        "type": "object",
+                                        "example": "{produkId: 2, jumlah: 3}"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Register",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Transaksi Berhasil Ditambahkan"
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/transaksi/:id": {
+            "get": {
+                "tags": [
+                    "Transaksi"
+                ],
+                "summary": "Get Single Transaksi",
+                "description": "Get Single Transaksi",
+                "operationId": "getTransaksiById",
+                "responses": {
+                    "200": {
+                        "description": "Transaksi Berhasil Ditemukan",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Transaksi Berhasil Ditemukan"
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Transaksi"
+                ],
+                "summary": "Delete Transaksi",
+                "description": "Delete Transaksi",
+                "operationId": "deleteTransaksi",
+                "responses": {
+                    "200": {
+                        "description": "Successful Register",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Transaksi Berhasil Dihapus"
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "patch": {
+                "tags": [
+                    "Transaksi"
+                ],
+                "summary": "Update Transaksi",
+                "description": "Update Transaksi",
+                "operationId": "patchTransaksi",
+                "requestBody": {
+                    "required": false,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "status": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Register",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Transaksi Berhasil Diupdate"
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/user/transaksi": {
+            "get": {
+                "tags": [
+                    "Transaksi"
+                ],
+                "summary": "Get Transaksi By User Id",
+                "description": "Get Transaksi By User Id",
+                "operationId": "getTransaksiByUserId",
+                "responses": {
+                    "200": {
+                        "description": "Daftar Transaksi Berhasil Ditemukan",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Daftar Transaksi Berhasil Ditemukan"
+                                        },
+                                        "data": {
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
